# files-to-prompt-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  model.rs  traverse.rs
templates/: analyze_threat_report.f2p  clean-up-code.f2p  document-the-code.f2p  explain-code.f2p  explain-project.f2p  extract-functions-detail.f2p  extract-functions-overview.f2p  extract-functions.f2p  extract_algorithm_update_recommendations.f2p  improve-performance.f2p  mermaid.f2p  refactor.f2p  review-source.f2p  suggest-basecode.f2p  write-github-readme.f2p
