[package]
name = "files_to_prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
regex = "1.5.4"
tera = "1.20.0"
rust-embed = "8.4.0"